--- a/ProyectoV2.csproj
+++ b/ProyectoV2.csproj
@@ -65,11 +65,23 @@
     <Compile Include="Vistas\CatalogoListas.Designer.cs">
       <DependentUpon>CatalogoListas.cs</DependentUpon>
     </Compile>
-    <Compile Include="Vistas\Form1.cs">
+    <Compile Include="Vistas\EditarBiciArreglos.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Vistas\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Vistas\EditarBiciArreglos.Designer.cs">
+      <DependentUpon>EditarBiciArreglos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vistas\EliminarBiciArreglo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\EliminarBiciArreglo.Designer.cs">
+      <DependentUpon>EliminarBiciArreglo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vistas\Inicio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\Inicio.Designer.cs">
+      <DependentUpon>Inicio.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -82,8 +94,14 @@
     <EmbeddedResource Include="Vistas\CatalogoListas.resx">
       <DependentUpon>CatalogoListas.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Vistas\Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Vistas\EditarBiciArreglos.resx">
+      <DependentUpon>EditarBiciArreglos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\EliminarBiciArreglo.resx">
+      <DependentUpon>EliminarBiciArreglo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\Inicio.resx">
+      <DependentUpon>Inicio.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
